src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>SalesLoft1__Most_Recent_Cadence_Name__c</fullName>
        <description>Most recent SalesLoft Cadence of Primary Contact associated with Opportunity.</description>
        <label>Most Recent Cadence - Cadence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Most_Recent_Last_Completed_Step__c</fullName>
        <description>Number of most recently completed SalesLoft Cadence step logged against the Opportunity&apos;s Primary Contact.</description>
        <label>Most Recent Cadence - Last Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Contact Associated with Opportunity.</description>
        <label>SalesLoft Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Primary Contact</relationshipLabel>
        <relationshipName>Opportunity_Primary_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Forecast__c</fullName>
        <label>Sales Forecast</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Most Likely</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_AppExchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce AppExchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Use_Case__c</fullName>
        <label>Secondary Use Case</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Primary_Use_Case__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_of_Events__c</fullName>
        <label>Sequence of Events</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solutions_Engineer__c</fullName>
        <label>Solutions Engineer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Teaming_Agreement_Date__c</fullName>
        <label>Teaming Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Teaming_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teaming Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technology_Stack__c</fullName>
        <label>Technology Stack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>True_Up_Period__c</fullName>
        <label>True Up Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year1_Percentage_Net_Revenue__c</fullName>
        <label>Year1 Percentage Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Sales</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Commit_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.FORECAST_CATEGORY</field>
            <operation>equals</operation>
            <value>Most Likely,Commit</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Sales</value>
        </filters>
        <label>Commit/Most Likely Opps</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>notEqual</operation>
            <value>Partner</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Opportunity_Source_Cleanup</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opportunity_Source__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Next_Step_Due_Date__c</columns>
        <columns>Next_Step_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Source__c</field>
            <operation>equals</operation>
            <value>Unknown</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Sales</value>
        </filters>
        <label>Opportunity Source Cleanup - Sales Opps</label>
    </listViews>
    <listViews>
        <fullName>Opportunity_Source_Cleanup_Partner</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opportunity_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Source__c</field>
            <operation>equals</operation>
            <value>Unknown</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Partner</value>
        </filters>
        <label>Opportunity Source Cleanup -  Partner</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <businessProcess>Partner</businessProcess>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <businessProcess>Sales</businessProcess>
        <label>Sales</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LID__Check_Company_Id_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_Number_Required</fullName>
        <active>true</active>
        <description>If PO Needed is marked, a PO Number must be filled in</description>
        <errorConditionFormula>AND(
  PO_Needed__c = TRUE,
 ISBLANK( PO_Number__c ))</errorConditionFormula>
        <errorDisplayField>PO_Number__c</errorDisplayField>
        <errorMessage>If a PO is needed, please provide a PO Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDR_Required</fullName>
        <active>true</active>
        <description>When Opportunity source is SDR Prospecting, the SDR field is required</description>
        <errorConditionFormula>AND(
 ISPICKVAL ( Opportunity_Source__c , &quot;SDR Prospecting&quot; ) ,
 ISBLANK ( SDR__c ) )</errorConditionFormula>
        <errorDisplayField>SDR_text__c</errorDisplayField>
        <errorMessage>Please enter an SDR in this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>link_to_proposal</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( TEXT(StageName) = &quot;Proposal&quot;, ISBLANK( Link_to_Proposal__c ))</errorConditionFormula>
        <errorDisplayField>Link_to_Proposal__c</errorDisplayField>
        <errorMessage>Please add a link to proposal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loss_reason_compulsory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
TEXT(StageName) = &quot;Closed Lost&quot;, TEXT( Competitor__c ) = &quot;Other&quot;),

ISBLANK( TEXT( Lost_Reason__c  )
))</errorConditionFormula>
        <errorMessage>Loss reason is mandatory when stage is &apos;Closed Lost&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>other_competitor</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT( Competitor__c ) = &quot;Other&quot;,  ISBLANK(Competitor_others__c))</errorConditionFormula>
        <errorDisplayField>Competitor_others__c</errorDisplayField>
        <errorMessage>Please fill in a value.</errorMessage>
    </validationRules>
</CustomObject>